// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`impliedPrice with endpoint computedPrice erroring calls returns error if not reaching minAnswers 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"computedPrice","operand1Sources":["coingecko"],"operand1MinAnswers":2,"operand2Sources":["coingecko"],"operand1Input":{"from":"LINK","to":"USD"},"operand2Input":{"from":"ETH","to":"USD"},"operation":"divide"}}",
    "message": "Not returning median: got 1 answers, requiring min. 2 answers",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`impliedPrice with endpoint computedPrice erroring calls returns error if operand1 has zero price 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"computedPrice","operand1Sources":["coingecko","coinpaprika"],"operand2Sources":["coingecko","coinpaprika"],"operand1Input":{"from":"DEAD","to":"USD"},"operand2Input":{"from":"ETH","to":"USD"},"operation":"divide"}}",
    "message": "Operand 1 result is zero",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`impliedPrice with endpoint computedPrice erroring calls returns error if operand2 has zero price 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"computedPrice","operand1Sources":["coingecko","coinpaprika"],"operand2Sources":["coingecko","coinpaprika"],"operand1Input":{"from":"LINK","to":"USD"},"operand2Input":{"from":"DEAD","to":"USD"},"operation":"divide"}}",
    "message": "Operand 2 result is zero",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`impliedPrice with endpoint computedPrice successful calls can multiply operands 1`] = `
{
  "data": {
    "result": "75462.5725",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "75462.5725",
  "statusCode": 200,
}
`;

exports[`impliedPrice with endpoint computedPrice successful calls displays number > e+21 as fixed point rather than exponential 1`] = `
{
  "data": {
    "result": "17150000000000000000000000",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "17150000000000000000000000",
  "statusCode": 200,
}
`;

exports[`impliedPrice with endpoint computedPrice successful calls return success without comma separated sources 1`] = `
{
  "data": {
    "result": "0.0038975944001909025829",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "0.0038975944001909025829",
  "statusCode": 200,
}
`;

exports[`impliedPrice with endpoint computedPrice successful calls returns success with comma separated sources 1`] = `
{
  "data": {
    "result": "0.0038975944001909025829",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "0.0038975944001909025829",
  "statusCode": 200,
}
`;

exports[`impliedPrice with endpoint computedPrice validation error returns a validation error if the request contains unsupported sources 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"computedPrice","operand1Sources":["NOT_REAL"],"operand2Sources":["coingecko"],"operand1Input":{"from":"LINK","to":"USD"},"operand2Input":{"from":"ETH","to":"USD"},"operation":"divide"}}",
    "message": "Please set the required env NOT_REAL_ADAPTER_URL.",
    "name": "RequiredEnvError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`impliedPrice with endpoint computedPrice validation error returns a validation error if the request data is empty 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"computedPrice"}}",
    "message": "Required parameter operand1Sources must be non-null and non-empty",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`impliedPrice with endpoint computedPrice validation error returns a validation error if the request is missing operand1 input 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"computedPrice","operand1Sources":["coingecko"],"operand2Sources":["coingecko"],"operand2Input":{"from":"ETH","to":"USD"},"operation":"divide"}}",
    "message": "Required parameter operand1Input must be non-null and non-empty",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`impliedPrice with endpoint computedPrice validation error returns a validation error if the request is missing operand2 input 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"computedPrice","operand1Sources":["coingecko"],"operand2Sources":["coingecko"],"operand1Input":{"from":"LINK","to":"USD"},"operation":"divide"}}",
    "message": "Required parameter operand2Input must be non-null and non-empty",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`impliedPrice with endpoint computedPrice validation error returns a validation error if the request is missing operation 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"computedPrice","operand1Sources":["coingecko"],"operand2Sources":["coingecko"],"operand1Input":{"from":"LINK","to":"USD"},"operand2Input":{"from":"ETH","to":"USD"}}}",
    "message": "Required parameter operation must be non-null and non-empty",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`impliedPrice with endpoint impliedPrice erroring calls returns error if dividend has zero price 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"impliedPrice","dividendSources":["coingecko","coinpaprika"],"divisorSources":["coingecko","coinpaprika"],"dividendInput":{"from":"DEAD","to":"USD"},"divisorInput":{"from":"ETH","to":"USD"}}}",
    "message": "Operand 1 result is zero",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`impliedPrice with endpoint impliedPrice erroring calls returns error if divisor has zero price 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"impliedPrice","dividendSources":["coingecko","coinpaprika"],"divisorSources":["coingecko","coinpaprika"],"dividendInput":{"from":"LINK","to":"USD"},"divisorInput":{"from":"DEAD","to":"USD"}}}",
    "message": "Operand 2 result is zero",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`impliedPrice with endpoint impliedPrice erroring calls returns error if not reaching minAnswers 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"impliedPrice","dividendSources":["coingecko"],"dividendMinAnswers":2,"divisorSources":["coingecko"],"dividendInput":{"from":"LINK","to":"USD"},"divisorInput":{"from":"ETH","to":"USD"}}}",
    "message": "Not returning median: got 1 answers, requiring min. 2 answers",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`impliedPrice with endpoint impliedPrice successful calls return success without comma separated sources 1`] = `
{
  "data": {
    "result": "0.0038975944001909025829",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "0.0038975944001909025829",
  "statusCode": 200,
}
`;

exports[`impliedPrice with endpoint impliedPrice successful calls returns success with comma separated sources 1`] = `
{
  "data": {
    "result": "0.0038975944001909025829",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "0.0038975944001909025829",
  "statusCode": 200,
}
`;

exports[`impliedPrice with endpoint impliedPrice validation error returns a validation error if the request contains unsupported sources 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"impliedPrice","dividendSources":["NOT_REAL"],"divisorSources":["coingecko"],"dividendInput":{"from":"LINK","to":"USD"},"divisorInput":{"from":"ETH","to":"USD"}}}",
    "message": "Please set the required env NOT_REAL_ADAPTER_URL.",
    "name": "RequiredEnvError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`impliedPrice with endpoint impliedPrice validation error returns a validation error if the request data is empty 1`] = `
{
  "error": {
    "feedID": "{"data":{}}",
    "message": "Required parameter dividendSources must be non-null and non-empty",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`impliedPrice with endpoint impliedPrice validation error returns a validation error if the request is missing dividend input 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"impliedPrice","dividendSources":["coingecko"],"divisorSources":["coingecko"],"divisorInput":{"from":"ETH","to":"USD"}}}",
    "message": "Required parameter dividendInput must be non-null and non-empty",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`impliedPrice with endpoint impliedPrice validation error returns a validation error if the request is missing divisor input 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"impliedPrice","dividendSources":["coingecko"],"divisorSources":["coingecko"],"dividendInput":{"from":"LINK","to":"USD"}}}",
    "message": "Required parameter divisorInput must be non-null and non-empty",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 400,
}
`;
